--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,6 +7,7 @@ on:
   release:
     types:
       - published
+  workflow_dispatch:
 
 jobs:
   build:
@@ -15,9 +16,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -32,19 +30,18 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker buildx build --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/textembed:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/your-image-name:latest .
 
       - name: Tag Docker image with release tag
         if: github.event_name == 'release'
         run: |
-          docker tag ${{ secrets.DOCKER_USERNAME }}/your-image-name:latest ${{ secrets.DOCKER_USERNAME }}/textembed:${{ env.RELEASE_TAG }}
+          docker tag ${{ secrets.DOCKER_USERNAME }}/your-image-name:latest ${{ secrets.DOCKER_USERNAME }}/your-image-name:${{ env.RELEASE_TAG }}
 
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/textembed:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/your-image-name:latest
 
       - name: Push Docker image with release tag
         if: github.event_name == 'release'
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/textembed:${{ env.RELEASE_TAG }}
-
+          docker push ${{ secrets.DOCKER_USERNAME }}/your-image-name:${{ env.RELEASE_TAG }}
