Fix: jekyll file

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -29,21 +29,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.0'
-      - name: Install Dependencies
-        run: |
-          gem install bundler
-          bundle install
       - name: Build with Jekyll
-        run: |
-          bundle exec jekyll build --source docs/docs --destination _site
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./docs/docs
+          destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
-        with:
-          path: _site
 
   # Deployment job
   deploy:
