--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 # Theme configuration
-theme: just-the-docs/just-the-docs
+remote_theme: just-the-docs/just-the-docs
 
 # Enable required plugins
 plugins:
