Fix: docs action yml

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Build the documentation
         run: |
+          cd docs
           mkdocs build
 
       - name: Deploy to GitHub Pages
