--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,6 +18,10 @@ jobs:
         with:
           python-version: 3.11
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 'latest'  # Install the latest version of Node.js
+
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -35,4 +39,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           publish_dir: ./site
-          github_token: ${{ secrets.GH_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
