--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,5 +38,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: ./site
+          publish_dir: ./docs/site
           github_token: ${{ secrets.GITHUB_TOKEN }}
