--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,7 +24,7 @@ jobs:
          env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # CUSTOM_DOMAIN: optionaldomain.com
-          CONFIG_FILE: docs/mkdocs.ym
+          CONFIG_FILE: docs/mkdocs.yml
           EXTRA_PACKAGES: build-base
           GITHUB_DOMAIN: kevaldekivadiya2415.github.io/textembed
           REQUIREMENTS: docs/requirements.txt
